<resources>
    <string name="app_name">Ask&amp;Answer</string>
    <string name="error">Error</string>
    <string name="error_message">An error has occurred</string>
    <string name="invalid_token_message">Token is invalid. Please re-authenticate</string>
    <string name="loading">Loading…</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="search_question">Search question</string>
    <string name="back">Back</string>
    <string name="your_account">Your Account</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_logout">Do you want to log out?</string>
    <string name="points">Points</string>
    <string name="credits">Credits</string>
    <string name="_0">0</string>
    <string name="credits_explanation_1">Credits can be used to increase the priority level of your question.</string>
    <string name="credits_explanation_2">You receive credits corresponding to the number of votes your answer gets.</string>
    <string name="questions">Questions</string>
    <string name="answers">Answers</string>
    <string name="no_questions">No questions found</string>
    <string name="no_questions_asked">You haven\'t asked any questions</string>
    <string name="add_question">Add Question</string>
    <string name="new_question">New Question</string>
    <string name="update_question">Update Question</string>
    <string name="save">Save</string>
    <string name="question_title">Question Title</string>
    <string name="question_body">Descriptive body of your question</string>
    <string name="priority_level">Priority level:</string>
    <string name="credits_2">Credits:</string>
    <string name="closed">Closed</string>
    <string name="title">Title</string>
    <string name="datetime">EEE, dd MMM yyyy - HH:mm</string>
    <string name="body">Body</string>
    <string name="actions">Actions</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="confirm_close">Are you sure you want to close this question?</string>
    <string name="confirm_delete_question">Are you sure you want to delete this question?</string>
    <string name="asker">Asker:</string>
    <string name="add_answer">Add Answer</string>
    <string name="your_answer">Your answer</string>
    <string name="no_answers">No answers yet</string>
    <string name="no_questions_answered">You haven\'t answered any questions</string>
    <string name="cancel">Cancel</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="votes">Votes:</string>
    <string name="confirm_delete_answer">Are you sure you want to delete this answer?</string>
</resources>