<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="2dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:contentPaddingTop="10dp"
        app:contentPaddingBottom="10dp">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLabelPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_level"
                android:textSize="15sp"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cardClosed"
                app:layout_constraintBottom_toBottomOf="@id/cardClosed"/>

            <TextView
                android:id="@+id/textPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="15sp"
                android:textColor="@color/grey"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toEndOf="@id/textLabelPriority"
                app:layout_constraintEnd_toStartOf="@id/cardClosed"
                app:layout_constraintTop_toTopOf="@id/textLabelPriority"
                app:layout_constraintBottom_toBottomOf="@id/textLabelPriority"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardClosed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/orange"
                app:cardElevation="0dp"
                android:visibility="invisible"
                app:contentPaddingLeft="8dp"
                app:contentPaddingRight="8dp"
                app:contentPaddingTop="5dp"
                app:contentPaddingBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closed"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardClosed"/>

            <TextView
                android:id="@+id/textUpdatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime"
                android:textSize="15sp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle"/>

            <TextView
                android:id="@+id/textBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textUpdatedAt"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>