<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="2dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="125dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:contentPaddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLabelVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/votes"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textVotes"
                app:layout_constraintBottom_toBottomOf="@id/textVotes"/>

            <TextView
                android:id="@+id/textVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/grey"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/textLabelVotes"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textUpdatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetime"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textVotes"/>

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textUpdatedAt"/>

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textName"/>

            <TextView
                android:id="@+id/textBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEmail"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/upvote"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:icon="@drawable/ic_upvote"
                app:iconTint="@color/white"
                app:iconSize="20dp"
                app:iconPadding="5dp"
                app:cornerRadius="5dp"
                android:paddingHorizontal="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textBody"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDownvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/downvote"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:icon="@drawable/ic_downvote"
                app:iconTint="@color/white"
                app:iconSize="20dp"
                app:iconPadding="5dp"
                app:cornerRadius="5dp"
                android:paddingHorizontal="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnUpvote"
                app:layout_constraintBottom_toBottomOf="@id/btnUpvote"/>

            <EditText
                android:id="@+id/editTextBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:importantForAutofill="no"
                android:lines="8"
                style="@style/AnswerInputFieldStyle"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEmail" />

            <TextView
                android:id="@+id/textBodyError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputErrorStyle"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextBody"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_teal"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                android:visibility="gone"
                android:paddingHorizontal="0dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textBodyError"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/mint"
                android:text="@string/cancel"
                android:textColor="@color/grey"
                android:textSize="15sp"
                app:cornerRadius="5dp"
                android:visibility="gone"
                android:paddingHorizontal="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@id/btnSaveAnswer"
                app:layout_constraintTop_toTopOf="@id/btnSaveAnswer"
                app:layout_constraintBottom_toBottomOf="@id/btnSaveAnswer"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="-10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardAnswer">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="0dp"
            android:text="@string/edit"
            android:textSize="17sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:icon="@drawable/ic_edit"
            app:iconGravity="textStart"
            app:iconTint="@color/green"
            app:iconSize="24dp"
            app:iconPadding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="0dp"
            android:text="@string/delete"
            android:textSize="17sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconTint="@color/red"
            app:iconSize="24dp"
            app:iconPadding="0dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnEditAnswer"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>