<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mint_gradient"
    tools:context=".views.activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        android:background="@color/dark_teal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_search_bar"
        android:text="@string/search_question"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/imageSearch"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>

    <ImageView
        android:id="@+id/imageSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search_question"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_teal"
        app:fabCustomSize="70dp"
        app:maxImageSize="40dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_question"
        app:shapeAppearanceOverlay="@style/FloatingActionButtonStyle"
        app:rippleColor="@color/teal"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>